--- a/SimpleQuestions/SimpleQuestions.csproj
+++ b/SimpleQuestions/SimpleQuestions.csproj
@@ -44,6 +44,7 @@
     <Compile Include="FreeBaseEdge.cs" />
     <Compile Include="FreeBaseNode.cs" />
     <Compile Include="FreeBaseReader.cs" />
+    <Compile Include="FreeBaseReaders\TripletSelector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionFileReader.cs" />
@@ -52,6 +53,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
