--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -60,7 +60,7 @@
   <ItemGroup>
     <Compile Include="AnswerExtraction\FreebaseDumpProcessor.cs" />
     <Compile Include="AnswerExtraction\DumpCreation_Batch.cs" />
-    <Compile Include="AnswerExtraction\Extractor.cs" />
+    <Compile Include="AnswerExtraction\EntityExtractor.cs" />
     <Compile Include="AnswerExtraction\GraphDisambiguatedLinker.cs" />
     <Compile Include="AnswerExtraction\LinkBasedExtractor.cs" />
     <Compile Include="AnswerExtraction\LinkIndex.cs" />
@@ -70,6 +70,7 @@
     <Compile Include="AnswerExtraction\ExtractionEvaluation_Batch.cs" />
     <Compile Include="AnswerExtraction\UtteranceLinker.cs" />
     <Compile Include="AnswerExtraction\WikidataDumpProcessor.cs" />
+    <Compile Include="ComputationCache.cs" />
     <Compile Include="Dataset\AnnotatedDialog.cs" />
     <Compile Include="Dataset\AnnotatedDialogBuilder.cs" />
     <Compile Include="Dataset\AnnotatedQuestionActionEntry.cs" />
