--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -107,6 +107,12 @@
     <Compile Include="FormatHelper.cs" />
     <Compile Include="Experiment\LogFile.cs" />
     <Compile Include="GeneralizationQA\GoldenAnswer_Batch.cs" />
+    <Compile Include="GeneralizationQA\SingleWordLinker.cs" />
+    <Compile Include="GeneralizationQA\PathSubstitution.cs" />
+    <Compile Include="GeneralizationQA\PatternGeneralizer.cs" />
+    <Compile Include="GeneralizationQA\PatternSubstitutionMatch.cs" />
+    <Compile Include="GeneralizationQA\SubstitutionValidator.cs" />
+    <Compile Include="GeneralizationQA\TraceNodeFollower.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Task\CollectionTaskInstance.cs" />
     <Compile Include="Task\InformativeTaskInstance.cs" />
