--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -25,7 +25,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -78,12 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerExtraction\AnswerExtractionManager.cs" />
     <Compile Include="AnswerExtraction\DialogContext.cs" />
     <Compile Include="AnswerExtraction\IModel.cs" />
     <Compile Include="AnswerExtraction\Models\RuleBasedDenotationModel.cs" />
     <Compile Include="AnswerExtraction\QuestionInfo.cs" />
     <Compile Include="AnswerExtraction\CachedLinker.cs" />
     <Compile Include="AnswerExtraction\ExtractionKnowledge.cs" />
+    <Compile Include="Dataset\FreebaseDbProvider2.cs" />
     <Compile Include="Dataset\FreebaseDbProvider.cs" />
     <Compile Include="Dataset\FreebaseDumpProcessor.cs" />
     <Compile Include="AnswerExtraction\DumpCreation_Batch.cs" />
@@ -95,7 +97,6 @@
     <Compile Include="Dataset\MysqlFreebaseConnector.cs" />
     <Compile Include="Dataset\Neo4jDbProvider.cs" />
     <Compile Include="Dataset\SimpleQuestionDumpProcessor.cs" />
-    <Compile Include="AnswerExtraction\LuceneIndex_Batch.cs" />
     <Compile Include="AnswerExtraction\SearchContext.cs" />
     <Compile Include="AnswerExtraction\ExtractionEvaluation_Batch.cs" />
     <Compile Include="AnswerExtraction\UtteranceLinker.cs" />
