--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -45,10 +45,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.7.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Actual projects\ServeRick\trunk\VSProjects\ServeRick\bin\Debug\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -78,6 +74,7 @@
     <Compile Include="AnswerExtraction\QuestionInfo.cs" />
     <Compile Include="AnswerExtraction\CachedLinker.cs" />
     <Compile Include="AnswerExtraction\ExtractionKnowledge.cs" />
+    <Compile Include="Dataset\DataWriter_Batch.cs" />
     <Compile Include="Dataset\FileReader.cs" />
     <Compile Include="Dataset\FreebaseDbProvider.cs" />
     <Compile Include="Dataset\FreebaseDumpProcessor.cs" />
@@ -87,12 +84,10 @@
     <Compile Include="AnswerExtraction\LinkIndex.cs" />
     <Compile Include="Dataset\FreebaseEntry.cs" />
     <Compile Include="Dataset\FreebaseGraphLayer.cs" />
-    <Compile Include="Dataset\MysqlFreebaseConnector.cs" />
     <Compile Include="Dataset\SimpleQuestionDumpProcessor.cs" />
     <Compile Include="AnswerExtraction\SearchContext.cs" />
     <Compile Include="AnswerExtraction\ExtractionEvaluation_Batch.cs" />
     <Compile Include="AnswerExtraction\UtteranceLinker.cs" />
-    <Compile Include="Dataset\WikidataDumpProcessor.cs" />
     <Compile Include="ComputationCache.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Dataset\AnnotatedDialog.cs" />
@@ -107,7 +102,6 @@
     <Compile Include="Dataset\Evaluator.cs" />
     <Compile Include="Dataset\DumpLoader.cs" />
     <Compile Include="Dataset\DumpWriter.cs" />
-    <Compile Include="Dataset\FreebaseLoader.cs" />
     <Compile Include="Dataset\QuestionDatasetWriter.cs" />
     <Compile Include="Dataset\QuestionDialog.cs" />
     <Compile Include="Dataset\QuestionDialogDatasetReader.cs" />
@@ -115,14 +109,10 @@
     <Compile Include="Dataset\SplitDescription.cs" />
     <Compile Include="DialogProvider\AnswerExtractionWebConsole.cs" />
     <Compile Include="DialogProvider\QuestionCollectionWebConsole.cs" />
-    <Compile Include="DialogProvider\DataCollectionWebConsole.cs" />
-    <Compile Include="DialogProvider\HeuristicManagerWebConsole.cs" />
     <Compile Include="Experiment\AnnotatedActionEntry.cs" />
     <Compile Include="Experiment\AnswerExtractionExperiment.cs" />
     <Compile Include="Experiment\QuestionCollectionExperiment.cs" />
-    <Compile Include="Experiment\DataCollectionExperiment.cs" />
     <Compile Include="Experiment\AnnotatedLogFile.cs" />
-    <Compile Include="Experiment\NoTaskExperiment.cs" />
     <Compile Include="Experiment\SolutionLog.cs" />
     <Compile Include="Experiment\ActionEntry.cs" />
     <Compile Include="Experiment\CrowdFlowerExperiment.cs" />
@@ -143,26 +133,13 @@
     <Compile Include="InputManager.cs" />
     <Compile Include="Task\CollectionTaskInstance.cs" />
     <Compile Include="Task\InformativeTaskInstance.cs" />
-    <Compile Include="Task\President\DaughterOfTask.cs" />
-    <Compile Include="Task\President\PlaceOfBornTask.cs" />
-    <Compile Include="Task\President\PresidentCollectionTaskFactory.cs" />
-    <Compile Include="Task\President\PresidentFatherTask.cs" />
-    <Compile Include="Task\President\PresidentInfo.cs" />
-    <Compile Include="Task\President\PresidentMotherTask.cs" />
-    <Compile Include="Task\President\SonOfTask.cs" />
-    <Compile Include="Task\TaskPatternUtilities.cs" />
     <Compile Include="DialogWeb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseManager.cs" />
     <Compile Include="RootController.cs" />
-    <Compile Include="Task\President\PresidentTaskFactory.cs" />
     <Compile Include="Task\TaskInstance.cs" />
-    <Compile Include="Task\President\PresidentChildrenTask.cs" />
-    <Compile Include="Task\President\PresidentOfStateTask.cs" />
-    <Compile Include="Task\President\StateOfPresidentTask.cs" />
     <Compile Include="Task\TaskPatternBase.cs" />
-    <Compile Include="Task\President\WifeOfPresidentTask.cs" />
     <Compile Include="Task\TaskFactoryBase.cs" />
     <Compile Include="DialogProvider\UserData.cs" />
     <Compile Include="DialogProvider\WebConsoleBase.cs" />
