--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -14,7 +14,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -70,6 +70,7 @@
     <Compile Include="AnswerExtraction\AnswerExtractionManager.cs" />
     <Compile Include="AnswerExtraction\DialogContext.cs" />
     <Compile Include="AnswerExtraction\IModel.cs" />
+    <Compile Include="AnswerExtraction\KnowledgeReport.cs" />
     <Compile Include="AnswerExtraction\Models\RuleBasedDenotationModel.cs" />
     <Compile Include="AnswerExtraction\QuestionInfo.cs" />
     <Compile Include="AnswerExtraction\CachedLinker.cs" />
@@ -151,6 +152,7 @@
     <None Include="www\action_log.haml" />
     <None Include="www\annotate.haml" />
     <None Include="www\annotate2.haml" />
+    <None Include="www\knowledge.haml" />
     <None Include="www\question_collection.haml" />
     <None Include="www\logs.haml" />
     <None Include="www\no_tasks.haml" />
