--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -48,8 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataCollection\MachineActs\ContinuationActBase.cs" />
+    <Compile Include="DataCollection\MachineActs\NotUnderstandableContinuationAct.cs" />
+    <Compile Include="DataCollection\MachineActs\UsefulContinuationAct.cs" />
     <Compile Include="DataCollection\MachineActs\DirectAnswerHintQuestionAct.cs" />
     <Compile Include="DataCollection\MachineActs\NoConnectionToEntityAct.cs" />
+    <Compile Include="DataCollection\MachineActs\NotUsefulContinuationAct.cs" />
     <Compile Include="DataCollection\MachineActs\WelcomeWithAnswerRequestAct.cs" />
     <Compile Include="DataCollection\MachineActs\TooBriefAnswerAct.cs" />
     <Compile Include="DataCollection\MachineActs\RephraseQuestionProposeAct.cs" />
